# jira-automation

./: .gitignore  LICENSE  README.md  board_config.yaml  main.py  pyproject.toml
.github/workflows/: jira_automation.yaml
src/: automation_start.py
src/auth/: credentials.py  jira_auth.py  session.py
src/constants/: field_types.py  jira_statuses.py  shared.py
src/customtypes/: shared.py
src/errors/: __init__.py  jira_board_not_found.py
src/exceptions/: config_error.py  config_not_found_error.py  config_schema_error.py  jira_board_not_found.py  jira_board_not_found_error.py  missing_credentials_error.py  missing_secrets_error.py
src/fieldtypes/: common.py
src/helpers/: config_accessor.py  is_valid_dart_sprint.py  key_extraction.py  payload_builder.py  sprint_naming.py  sprint_parser.py
src/logging_config/: configure_logging.py  error_handling.py  logging_config.py
src/logs/: configure_logging.py  error_handling.py
src/models/: board_config.py  credentials.py  env_reader.py  jira_issue.py  payload.py  sprint_close_payload.py  sprint_create_response.py  sprint_payload.py  sprint_start_payload.py  sprint_summary.py
src/orchestration/: sprint_orchestration.py
src/services/: jira_issues.py  jira_sprint.py  jira_sprint_closure.py  jira_start_sprint.py  sprint_transfer.py
src/type_defs/: boardconfig.py  jira_issue.py  payload.py  sprint_close_payload.py  sprint_create_response.py  sprint_start_payload.py
src/utils/: config_loader.py  datetime_format.py  payload_builder.py  sprint_naming.py  sprint_parser.py  (+1 more)
test/: conftest.py
tests/: conftest.py
(+70 files in other folders)
